Setting up base system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,19 @@ add_subdirectory(tools)
 set(LLVM_MOS_PLATFORM rp6502)
 find_package(llvm-mos-sdk REQUIRED)
 
-project(MY-RP6502-PROJECT C CXX ASM)
+project(RPMegaRacer C CXX ASM)
 
-add_executable(hello)
-rp6502_executable(hello
+add_executable(RPMegaRacer)
+rp6502_asset(RPMegaRacer 0x10000 images/RedRacer.bin)
+rp6502_executable(RPMegaRacer
+    RedRacer.bin.rp6502
     DATA file
     RESET file
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.hlp
 )
-target_sources(hello PRIVATE
+target_sources(RPMegaRacer PRIVATE
     src/main.c
+    src/player.c
+    src/input.c
+    src/opl.c
 )
