--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,12 @@ project(RPMegaRacer C CXX ASM)
 
 add_executable(RPMegaRacer)
 rp6502_asset(RPMegaRacer 0x10000 images/RedRacer.bin)
+rp6502_asset(RPMegaRacer 0x10214 images/Track_Map_A.bin)
+rp6502_asset(RPMegaRacer 0x11A14 images/Track_A_tiles.bin)
 rp6502_executable(RPMegaRacer
     RedRacer.bin.rp6502
+    Track_Map_A.bin.rp6502
+    Track_A_tiles.bin.rp6502
     DATA file
     RESET file
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.hlp
