fixed for native OPL2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,16 @@ find_package(llvm-mos-sdk REQUIRED)
 
 project(RPMegaRacer C CXX ASM)
 
+# Define the option (Default is ON/Native) 
+option(USE_NATIVE_OPL2 "Use the RIA native OPL2 support" ON)
+
+if(USE_NATIVE_OPL2)
+    add_definitions(-DUSE_NATIVE_OPL2)
+    message(STATUS "Targeting: Native RIA OPL2")
+else()
+    message(STATUS "Targeting: FPGA TinyFPGA Sound Card")
+endif()
+
 add_executable(RPMegaRacer)
 rp6502_asset(RPMegaRacer 0x10000 images/RedRacer.bin)
 rp6502_asset(RPMegaRacer 0x10850 images/Track_Map_A.bin)
