framework for adding new Tracks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,15 @@
 {
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "cmake.showSystemKits": false,
     "cmake.preferredGenerators": [
         "Ninja",
-        "Unix Makefiles",
+        "Unix Makefiles"
     ],
     "cmake.options.advanced": {
         "launch": {
-            "statusBarVisibility": "hidden",
+            "statusBarVisibility": "hidden"
         },
         "debug": {
-            "statusBarVisibility": "hidden",
+            "statusBarVisibility": "hidden"
         }
-    },
-    "C_Cpp.errorSquiggles": "disabled",
+    }
 }
